# esp32-sensirion-i2c-sensors

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  cfg.c  cfg.h  mqtt_task.c  sensor_main.c  sensor_task.h  sht3x_task.c  sps30_task.c  wifi_conn.c  wifi_conn.h
main/ecli/: cli.c  cli.h  cli_linebuf.c  cli_linebuf.h  cli_proc.c  cli_proc.h  safe_limits.h  safe_types.h
main/embedded-uart-common/: sensirion_uart_esp32.c
main/sht3x/: esp32_wrapper.c  esp32_wrapper.h  sht3x_platform.h
main/sps30/: sps30.c
